--- a/style.css
+++ b/style.css
@@ -6,3 +6,46 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+.hero {
+    padding: 0 200px;
+    padding-bottom: 100px;
+    margin: 0;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 48px;
+}
+
+
+.header h1 {
+    font: 24px;
+    color: #F9FAF8;
+}
+
+.header-links {
+    display: flex
+}
+
+ul {
+    list-style: none;
+    display: flex;
+    gap: 15px;
+}
+
+a {
+    text-decoration: none;
+}
+
+.hero {
+    background-color: #1f2937;
+}
+
+.hero-main {
+    font-size: 48px;
+    font-weight: extra-bold;
+    color: #F9FAF8;
+}
