--- a/style.css
+++ b/style.css
@@ -30,6 +30,12 @@ body {
     display: flex
 }
 
+.header-links a,
+.hero-secondary {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
 ul {
     list-style: none;
     display: flex;
@@ -48,4 +54,42 @@ a {
     font-size: 48px;
     font-weight: extra-bold;
     color: #F9FAF8;
+}
+
+button {
+    background-color: #3882f6;
+    border: 1px solid #3882f6;
+    padding: 5px 24px;
+    border-radius: 8px;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+/* for hero body*/
+.hero-right {
+    display: flex;
+    background-color: rgb(101, 101, 119);
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    min-width: 500px;
+    flex: 1;
+    height: 300px;
+    flex-shrink: 0;
+}
+
+.hero-image {
+    color: white;
+}
+
+.hero-body {
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+    justify-content: space-between;
+    /* height: 250px; */
+
+    /* border: 2px solid red; */
 }
