--- a/style.css
+++ b/style.css
@@ -93,3 +93,52 @@ button {
 
     /* border: 2px solid red; */
 }
+
+
+/* For random info section*/
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 100px;
+    padding-top: 16px;
+    padding-bottom: 100px;
+}
+
+.info h1 {
+    font-size: 36px;
+    font-weight: extra-bold;
+    color: #1f2937;
+}
+
+.info-image {
+    width: 150px;
+    height: 150px;
+    border: 3px solid #3882f6;
+    border-radius: 10px;
+}
+
+.info-container {
+    display: flex;
+    gap: 48px;
+    /* max-width: 800px; */
+    /* flex-wrap: wrap; */
+
+
+    /* border: 2px solid red; */
+}
+
+.info-subcontainer {
+    align-items: center;
+    justify-content: space-between;
+    max-width: 150px;
+    gap: 5px;
+    flex: 1;
+    /* border: 2px solid red; */
+}
+
+.info-subtext {
+    text-align: center;
+    color: #a7a7a7;
+}
